# aif

./: SETUP_GUIDE.md  STOCK_AGENT_INTEGRATION.md
backend/: .env  ALPHA_VANTAGE_INTEGRATION.md  config.py  get_stock_price.py  graph_builder.py  main.py  main_modular.py  main_original_backup.py  models.py  pyproject.toml  requirements.txt  router.py  stockMarketAnalysis.py  stockMarketAnalysis_simple.py  stock_agent.py  technical_analysis.py  technical_analysis_agent.py  utils.py
frontend/: README.md
frontend/.github/: copilot-instructions.md
frontend/src/: App.jsx
frontend/src/components/: ChatBot.css  ChatBot.jsx  ChatHistory.jsx  MessageForm.jsx  ResponseDisplay.jsx
