[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
